tests/ui/failing/try-block-in-return.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.00s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/try-block/try-block-in-return.rs`
error: expected identifier, found `4`
 --> /home/zncv/Applications/mir-semantics-compiletest/ui/try-block/try-block-in-return.rs:7:18
  |
7 |     return try { 4 }
  |            ---   ^ expected identifier
  |            |
  |            while parsing this struct

error[E0574]: expected struct, variant or union type, found macro `try`
 --> /home/zncv/Applications/mir-semantics-compiletest/ui/try-block/try-block-in-return.rs:7:12
  |
7 |     return try { 4 }
  |            ^^^ not a struct, variant or union type
  |
  = note: if you want the `try` keyword, you need Rust 2018 or later
help: use `!` to invoke the macro
  |
7 |     return try! { 4 }
  |               +

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0574`.
